# Scaling-Tracking-Across-the-World-Game

./: .gitignore  ReadMe.md  pyproject.toml  requirements.txt
notebooks/: impute_visualiser_release.ipynb  paper_metrics.ipynb
src/tracking_animator/: basic_plot.py  interactive_animator.py  interactive_controller.py  visualiser.py
